style: fix crypto logos visibility by adding display property

--- a/style.css
+++ b/style.css
@@ -293,6 +293,7 @@ button {
 
 .network-item::before {
     content: "";
+    display: inline-block;
     width: 20px;
     height: 20px;
     background-size: contain;
